<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.regras.RegrasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/amarelo_vibrante"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/button_voltar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/azul_escuro"
                android:contentDescription="@string/voltar"
                android:src="@drawable/back_24"
                app:cornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/como_jogar"
                android:textColor="@color/vermelho_pastel"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_voltar"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <VideoView
            android:id="@+id/video_regras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/verde_claro"
                android:text="@string/play"
                android:textColor="@color/texto_preto"
                app:cornerRadius="6dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/laranja_claro"
                android:text="@string/pause"
                android:textColor="@color/texto_preto"
                app:cornerRadius="6dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/vermelho_pastel"
                android:text="@string/stop"
                android:textColor="@color/texto_branco"
                app:cornerRadius="6dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
