<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.placar.PlacarFragment">

    <TextView
        android:id="@+id/textViewPlacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/placar_atual"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPrimeiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:text="Primeiro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlacar" />

    <TextView
        android:id="@+id/textViewSegundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:text="Segunto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrimeiro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        >
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/vermelho_pastel"
        android:text="@string/sair"
        android:textColor="@color/texto_branco"
        android:textSize="18sp"
        app:cornerRadius="6dp"
        />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNovo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde_claro"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/novo_jogo"
            android:textColor="@color/texto_preto"
            android:textSize="18sp"
            app:cornerRadius="6dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>